3.007 

    [ENHANCEMENTS]
    
    - Class/Role/Module in the global scope aliased as Joose.Class/Joose.Role/Joose.Module
    - Joose no longer overwrites the Class/Role/Module symbols in global scope (should allow Prototype support)
    - Static instance ('my') now receives a special 'HOST' configuration parameter during instantiation, containing a hosting class constructor
    - returning 'false' from Joose.A/O.each iterators stops the iteration and can be propagated further 
    - added `Joose.A.map` helper
    - attributes initialization moved from `initialize` method to constructor (it was somewhat restrictive - only allows `after` modifiers), this allows:
        1) the `before` modifier for `initialize` with already initialized attributes
        2) better support for inheriting from non-Joose classes (which may not have `initialize` at all)
    - added ability to specify the arbitrary method (by name) for attributes initialization ("builder" in Moose meaning)
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    - fixed bug, when traits weren't applied to the class with already detached meta 
    (when the meta already had traits) 


3.006   Mon, Feb 22, 2010

    [ENHANCEMENTS]
    
    - Added 'Changes' log
    - the actual slot, to which the attribute of the class is applied became configurable
      this will allow to have nicer "private" attributes and combined accessors
    - some progress on docs (mentioned custom names for accessors and 'isPrivate' option)

    
    [API CHANGES]

    -none-
    

    [BUG FIXES]
    
    -none-