@@ -72,6 +72,7 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
                     var classWithTrait  = thisMeta.subClassOf(this.constructor, { does : traits || [] })
                     var meta            = classWithTrait.meta
                     meta.isDetached     = true
+                    meta.name           = thisMeta.name
                     
                     return meta.instantiate.call(meta, thisMeta.skipTraitsAnchor, arguments)
                 }
