@@ -19,7 +19,8 @@
     [BUG FIXES]
     
     - fixed bug, when traits weren't applied to the class with already detached meta 
-    (when the meta already had traits) 
+    (when the meta already had traits)
+    - fixed bug, when the metaclass of detached instance had no name 
 
 
 3.006   Mon, Feb 22, 2010
